force-app/main/default/objects/Completion__c/Completion__c.object-meta.xml
<CustomObject>
    <description>The Junction object for Challenges and User that is used to keep a record of completed challenges. Records of this object should be created when User is assigned a Stack.</description>
    <label>Completion</label>
    <nameField>
        <displayFormat>Comp-{0000000}</displayFormat>
        <label>Completion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>