force-app/main/default/objects/Completion__c/fields/Challenge__c.field-meta.xml
<CustomField>
    <fullName>Challenge__c</fullName>
    <label>Challenge</label>
    <referenceTo>Challenge__c</referenceTo>
    <relationshipLabel>Completions</relationshipLabel>
    <relationshipName>Completions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>