force-app/main/default/objects/Completion__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Challenge completed by the user?</description>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>