force-app/main/default/objects/Completion__c/fields/CompletedBy__c.field-meta.xml
<CustomField>
    <fullName>CompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CompletedBy</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Completions</relationshipLabel>
    <relationshipName>Completions</relationshipName>
    <type>Lookup</type>
</CustomField>