force-app/main/default/objects/Completion__c/fields/DateReceived__c.field-meta.xml
<CustomField>
    <fullName>DateReceived__c</fullName>
    <label>DateReceived</label>
    <type>Date</type>
</CustomField>