force-app/main/default/objects/Completion__c/listViews/jiun9u.listView-meta.xml
<ListView>
    <fullName>jiun9u</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>j</label>
</ListView>